boton atras new_page

--- a/news_page/news_page.html
+++ b/news_page/news_page.html
@@ -13,6 +13,17 @@
 </head>
 <body class="bg-gray-100 font-sans p-6">
     <div class="container">
+        <!-- 🔙 Botón para volver atrás -->
+        <button 
+            onclick="window.history.back()" 
+            class="flex items-center gap-2 text-blue-700 hover:text-blue-900 font-semibold mb-4 transition"
+        >
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-5 h-5">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M15 19l-7-7 7-7" />
+            </svg>
+            Volver atrás
+        </button>
+
         <h1 class="text-4xl font-extrabold text-blue-700 mb-6 border-b pb-2">
             Noticias sobre el Clima
         </h1>
